--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <!--    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <!--Fontawesome CDN-->
-    <script src="https://kit.fontawesome.com/a42bee70de.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/sweat-daddy-app-logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sweat Daddy</title>
-</head>
-<body>
-<div id="root"></div>
-<script type="module" src="/src/main.jsx"></script>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
